--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Database related properties
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useSSL=false
+database.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 database.user=root
 database.password=root
 
